--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "react-cxs",
   "version": "1.0.0-beta.1",
   "description": "Alternative React.createElement function which allows style objects to be passed to the className prop to generate CSS using cxs",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "prepublish": "mkdir -p dist && babel src --out-dir dist",
     "start": "webpack-dev-server",
     "build": "webpack -p",
     "gh-pages": "gh-pages -d demo",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "ava": "^0.15.2",
+    "babel-cli": "^6.10.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
@@ -35,13 +37,13 @@
     "gh-pages": "^0.11.0",
     "highlight-loader": "^0.7.2",
     "html-loader": "^0.4.3",
-    "jsdom": "^9.4.0",
+    "jsdom": "^9.4.1",
     "jsdom-global": "^2.0.0",
     "json-loader": "^0.5.4",
     "markdown-loader": "^0.1.7",
-    "react": "^15.1.0",
+    "react": "^15.2.0",
     "react-addons-test-utils": "^15.2.0",
-    "react-dom": "^15.1.0",
+    "react-dom": "^15.2.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
